--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "@primeng/themes": "^19.0.10",
     "@tailwindcss/postcss": "^4.1.4",
     "bootstrap": "^5.3.5",
+    "chart.js": "^4.0.0",
     "jwt-decode": "^3.1.2",
     "ng2-charts": "^8.0.0",
-    "chart.js": "^4.0.0",
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.10",
